--- a/src/Navbar/navbar.css
+++ b/src/Navbar/navbar.css
@@ -36,8 +36,8 @@
     width: 140px;
     height: 40px;
     border: none;
-    background: #ffb8e0;
-    color: #000;
+    background: #000;
+    color: #fff;
     font-size: 16px;
     border-radius: 50px;
     cursor: pointer;
