--- a/src/SideNav/sideNav.css
+++ b/src/SideNav/sideNav.css
@@ -4,20 +4,71 @@
     top: 0;
     left: 0;
     height: 100%;
-    width: 300px;
-    background: #ffb8e0;
+    width: 350px;
+    background: #05000f;
     transition: 0.3s;
     z-index: 2;
+    display: flex;
+    justify-content: center;
+    align-items: center;
 }
 .side-nav.open {
     transform: translateX(0);
 }
+.close-btn {
+    position: absolute;
+    width: 60px;
+    height: 60px;
+    border: none;
+    background: #ffb8e0;
+    border-radius: 50%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    top: 15px;
+    left: 15px;
+    cursor: pointer;
+}
+.close-icon {
+    width: 30px;
+    height: 30px;
+    color: #05000f;
+    transition: 0.1s;
+}
+.close-btn:hover .close-icon {
+    rotate: 90deg;
+}
+.nav-links {
+    display: flex;
+    justify-content: center;
+    align-items: start;
+    flex-direction: column;
+    gap: 20px;
+}
+.nav-links button {
+    background: transparent;
+    border: none;
+    color: #ffb8e0;
+    font-size: 40px;
+    font-weight: 700;
+    transition: 0.2s;
+    cursor: pointer;
+}
+.nav-links button:hover {
+    color: #fff;
+}
 @media (max-width: 800px) {
     .side-nav {
-
+        transform: translateX(0);
         width: 100%;
+        opacity: 0;
+        visibility: hidden;
     }
     .side-nav.open {
-        transform: translateY(100%);
+        opacity: 1;
+        visibility: visible;
+    }
+    .nav-links {
+        align-items: center;
     }
 }
