--- a/src/index.css
+++ b/src/index.css
@@ -1,4 +1,3 @@
-
 @font-face {
   font-family: "Rubik", sans-serif;
   font-weight: 700;
@@ -11,4 +10,7 @@
 }
 body {
   background: #05000f;
+}
+.no-scroll {
+  overflow: hidden;
 }
