--- a/src/ProductPage/ProductPage.css
+++ b/src/ProductPage/ProductPage.css
@@ -8,4 +8,48 @@
     display: flex;
     justify-content: center;
     align-items: center;
+    height: 100vh;
+}
+.product-img {
+    width: 100%;
+    height: 100%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+.product-img img {
+    width: 80%;
+}
+.product-info-container {
+    width: 100%;
+    height: 40vh;
+    display: flex;
+    justify-content: center;
+    align-items: start;
+    flex-direction: column;
+    gap: 30px;
+    padding-right: 50px;
+}
+.product-name {
+    color: #fff;
+    font-size: 24px;
+}
+.product-description {
+    color: #fff;
+}
+.product-buttons {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    width: 100%;
+}
+.product-buttons button {
+    width: 100%;
+    height: 50px;
+    border: none;
+    background: #fff;
+    color: #000;
+    font-size: 20px;
+    border-radius: 50px;
+    cursor: pointer
 }
