--- a/src/HomePage/HomePage.css
+++ b/src/HomePage/HomePage.css
@@ -105,7 +105,7 @@
 .item {
     width: 100%;
     max-width: 400px;
-
+    height: 100%;
     padding: 15px;
     display: flex;
     justify-content: space-between;
@@ -119,9 +119,6 @@
     color: #fff;
 }
 .item:hover {
-    /*border-color: #ffb8e0;
-    background: rgba(255, 184, 224, 0.5);*/
-    color: #000;
     background: #855a79;
 }
 .item .img-container {
@@ -144,7 +141,7 @@
     width: 100%;
     background: transparent;
     color: #fff;
-    border: 1px solid transparent;
+    border: 1px solid #fff;
     border-radius: 5px;
     cursor: pointer;
     transition: 0.3s;
