--- a/src/SideNav/sideNav.css
+++ b/src/SideNav/sideNav.css
@@ -66,6 +66,19 @@
 .nav-links button:hover {
     color: #fff;
 }
+.nav-links a {
+    text-decoration: none;
+    background: transparent;
+    border: none;
+    color: #ffb8e0;
+    font-size: 40px;
+    font-weight: 700;
+    transition: 0.2s;
+    cursor: pointer;
+}
+.nav-links a:hover {
+    color: #fff;
+}
 .all-links .socials-container {
     display: flex;
     justify-content: start;
